--- a/cambnet/templates/base.html
+++ b/cambnet/templates/base.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 		<script type="text/javascript" src="{% static 'home/js/general.js' %}"></script>
+		<link rel="stylesheet" type="text/css" href="//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css"/>
 		<link rel="stylesheet" type="text/css" href="{% static 'home/css/style.css' %}"/>
 		<title>{% block title %}CAMBnet - Home{% endblock %}</title>
 	</head>
@@ -54,8 +55,8 @@
 					{% endif %}
 				</div>
 				<ul id="mainmenu">
-					<li class="menuitem"><a class="button" href="{% url 'home:index' %}">Home</a></li>
-					<li class="menuitem"><a class="button" href="{% url 'gigs:index' %}">Gigs</a></li>
+					<li class="menuitem"><a class="abutton" href="{% url 'home:index' %}">Home</a></li>
+					<li class="menuitem"><a class="abutton" href="{% url 'gigs:index' %}">Gigs</a></li>
 				</ul>
 			</nav>
 
